--- a/last child and last of type.html
+++ b/last child and last of type.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="last child and last of type.css">
+    <title>last child and last of type</title>
 </head>
 <body>
+    <header>
+        <p>I am the first paragraph inside header and first element too</p>
+        <p>i am the second paragraph</p>
+        <p>i am the third paragraph</p>
+        <h1>i am heading and last element</h1>
+    </header>
     
+    <header>
+        <h1>heading</h1>
+        <p>I am the first paragraph</p>
+        <p>i am the second paragraph</p>
+        <p>i am the third paragraph</p>
+    </header>
+
+    <p>i am direct child of body</p>
+    <p>i am also direct child of body</p>
+
+    
+    <div class="container">
+        <p>i am first paragraph inside container</p>
+        <p>i am second paragraph inside container</p>
+        <p>i am last paragraph inside container</p>
+    </div>
 </body>
 </html>
