--- a/not, empty and root pseudo class.html
+++ b/not, empty and root pseudo class.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>heading</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ullam accusantium rerum veniam libero quo quidem illo distinctio dignissimos quibusdam, blanditiis aut ipsa nemo voluptatum debitis repudiandae at atque nulla officia itaque. Architecto adipisci ducimus excepturi aut, fugit nesciunt similique. Ipsum facere eligendi impedit amet, error veritatis maxime exercitationem accusantium.</p>
+    <div></div>
+    <p class="fancy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ullam accusantium rerum veniam libero quo quidem illo distinctio dignissimos quibusdam, blanditiis aut ipsa nemo voluptatum debitis repudiandae at atque nulla officia itaque. Architecto adipisci ducimus excepturi aut, fugit nesciunt similique. Ipsum facere eligendi impedit amet, error veritatis maxime exercitationem accusantium.</p>
+    <div></div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ullam accusantium rerum veniam libero quo quidem illo distinctio dignissimos quibusdam, blanditiis aut ipsa nemo voluptatum debitis repudiandae at atque nulla officia itaque. Architecto adipisci ducimus excepturi aut, fugit nesciunt similique. Ipsum facere eligendi impedit amet, error veritatis maxime exercitationem accusantium.</p>
 </body>
 </html>
